# chip8-interpretador

./: .gitignore  main.py  pyproject.toml
chip8/: __init__.py
chip8/app/: __init__.py  app.py  decodificar.py  mainloop.py  obter_decodificar_executar_loop.py  setup.py
chip8/nucleo/: __init__.py
chip8/nucleo/componentes/: __init__.py  contador.py  contexto_runtime.py  ram.py  registradores.py  tela.py
chip8/nucleo/dados/: __init__.py  call_stack.py  contador.py  contexto_runtime.py  instrucao.py  pixel_map.py  ram.py  registradores.py  tipos.py  type_alias.py
chip8/nucleo/instrucao/: __init__.py  desenhar_na_tela_DXYN.py  escrever_no_registrador_index_ANNN.py  escrever_no_registrador_vx_6XNN.py  escrever_no_registrador_vx_a_soma_vx_e_vy_e_setar_vf_8XY4.py  escrever_no_registrador_vx_a_subtracao_entre_vx_vy_e_setar_vf_8XY5.py  escrever_no_registrador_vx_o_valor_do_registrador_vy_8XY0.py  escrever_no_registrador_vx_o_valor_vx_and_vy_8XY2.py  escrever_no_registrador_vx_o_valor_vx_or_vy_8XY1.py  escrever_no_registrador_vx_o_valor_vx_xor_vy_8XY3.py  jump_1NNN.py  limpar_tela_00e0.py  somar_no_registrador_vx_7XNN.py
chip8/nucleo/operacoes/: __init__.py  codigo_call_stack.py  codigo_contador.py  codigo_pixel_map.py  (+6 more)
chip8/servicos/: __init__.py  display.py  map.py
rom/: instruc.txt
testes/: fixtures.py  test_ibm_logo.py
testes/app/: test_chip8.py  test_decodificar.py
testes/integracao/: test_loop.py  test_obter_decodificar_executar (conflicted).py  test_obter_decodificar_executar.py
testes/servicos/: test_binarios.py  test_hexadecimais.py  test_inteiros.py
(+120 files in other folders)
