[tool.poetry]
name = "chip8-interpretador"
version = "0.1.0"
description = ""
authors = ["leonardo <leo.pohlmann@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
